--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
+
+<!DOCTYPE html>
 <html>
-<body>
-James's GitHub
-<a rel="me" href="https://cuff.social/@james">Mastodon</a>
-</body>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Redirecting to github.com/drcuff/</title>
+    <meta http-equiv="refresh" content="0; URL=https://github.com/drcuff">
+    <link href="https://github.com/drcuff" rel="me">
+    <link href="https://witnix.com/" rel="me">
+    <link href="https://cuff.social/@james" rel="me">
+  </head>
+  <body style="margin: 0; padding: 0">
+    <a
+      href="https://github.com/drcuff"
+      style="
+        display: block;
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+        color: white;
+      "
+    >
+      github.com/drcuff
+    </a>
+  </body>
+</html>
+
