--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="0; URL=https://github.com/drcuff">
     <link href="https://github.com/drcuff" rel="me">
     <link href="https://witnix.com/" rel="me">
-    <link href="https://cuff.social/@james" rel="me">
+    <link href="https://mast.hpc.social/DrCuff" rel="me">
   </head>
   <body style="margin: 0; padding: 0">
     <a
@@ -18,12 +18,12 @@
         width: 100vw;
         margin: 0;
         padding: 0;
-        color: white;
+        color: black;
       "
     >
       github.com/drcuff
     </a>
-   <a rel="me" href="https://cuff.social/@james">Mastodon</a>
+   <a rel="me" href="https://mast.hpc.social/@DrCuff">.</a>
   </body>
 </html>
 
